--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ partial "header.html" . }}
-{{ if isset .Params "cover_image" }}
+{{ if isset .Params "coverimage" }}
 <div class="article-cover">
     <div>
-        <img src="/images/{{ .Params.cover_image }}" class="image">
+        <img src="/images/{{ .Params.coverimage }}" class="image">
     </div>
 </div>
 {{ end }}
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <div class="meta">
-                By <address><a rel="author" href="{{ .Params.author.link }}" title="{{ .Params.author.name }}" target="_blank">{{ .Params.author.name }}</a></address> &mdash;
+                By <address><a rel="author" href="{{ .Params.author.link }}" title="{{ .Params.authorname }}" target="_blank">{{ .Params.authorname }}</a></address> &mdash;
                 <time pubdate datetime="{{ .Date.Format "2006-01-02" }}" title="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "January 02, 2006" }}</time>
             </div>
             <h1 class="title">{{ .Title }}</h1>
@@ -25,9 +25,9 @@
 
         <footer>
             <address>
-               {{ if isset .Params "author.image" }}<img src="/images/{{ .Params.author.image }}">{{ end }}
-                <p>Written by <strong><a rel="author" href="https://twitter.com/{{ .Params.author.twitter }}" title="{{ .Params.author_name }}" target="_blank">{{ .Params.author.name }}</a></strong><br>
-                <span class="muted">{{ .Params.author.bio }}</span>
+               {{ if isset .Params "authorimage" }}<img src="/images/{{ .Params.authorimage }}">{{ end }}
+                <p>Written by <strong><a rel="author" href="https://twitter.com/{{ .Params.authortwitter }}" title="{{ .Params.authorname }}" target="_blank">{{ .Params.authorname }}</a></strong><br>
+                <span class="muted">{{ .Params.authorbio }}</span>
                 </p>
             </address>
 
